# cmnomad

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
configs/: nginx_https.conf  nomad.yaml
tests/: test_app_entry_points.py
