[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[infrastructure]<=1.4.2rc1",
  # The following depenencies were being used in some plugins implicitly as via nomad dependencies
  # but now that nomad doesn't depend on them, the deployment fails. This is a temporary fix until the plugins add
  # these as explicit dependencies
  "toposort",
  "nptyping",
]

[project.urls]
homepage = "https://nomad-lab.eu/"
documentation = "https://nomad-lab.eu/prod/v1/docs"
repository = 'https://gitlab.mpcdf.mpg.de/nomad-lab/nomad-distro'

[project.optional-dependencies]
plugins = [
  "nomad-gui>=2.0.0a2.dev459",
  "nomad-simulations==0.6.0",
  "nomad-simulation-apps==0.1.2",
  "nomad-schema-plugin-run==1.0.5",
  "nomad-schema-plugin-simulation-workflow==1.0.11",
  "nomad-normalizer-plugin-bandstructure==1.0.4",
  "nomad-normalizer-plugin-dos==1.0.6",
  "nomad-normalizer-plugin-soap==1.0.2",
  "nomad-normalizer-plugin-spectra==1.0.4",
  "nomad-normalizer-plugin-system==1.0.5",
  "nomad-normalizer-plugin-simulation-workflow==1.0.4",
  "nomad-parser-plugins-electronic==1.0.13",
  "nomad-parser-plugins-atomistic==1.0.10",
  "nomad-parser-plugins-workflow==1.1.12",
  "nomad-parser-plugins-database==1.1.3",
  "pynxtools==0.12.0",
  "pynxtools-apm==0.4.3",
  "pynxtools-ellips==0.1.1",
  "pynxtools-em==0.4.2",
  "pynxtools-igor==0.1.4",
  "pynxtools-mpes==0.2.6",
  "pynxtools-raman==0.1.1",
  "pynxtools-spm==0.2.1",
  "pynxtools-xps==0.5.4",
  "pynxtools-xrd==0.0.7",
  "nomad-north-jupyter @ git+https://github.com/FAIRmat-NFDI/nomad-north-jupyter.git@4e36a9d55d74aacf9490d5afde8ad99f5f2e8e2a",
  "nomad-catalysis==1.0.5",
  "nomad-neb-workflows==1.0.2",
  "nomad-porous-materials @ git+https://github.com/FAIRmat-NFDI/nomad-porous-materials.git@522f4a3208077f534f1c5e886527ee2104283d0b",
  "nomad-aitoolkit @ git+https://github.com/FAIRmat-NFDI/nomad-aitoolkit.git@b203f8eb28dc4b6771a39d5c5b7ad3d9d8583ac8",
  "nomad-external-eln-integrations @ git+https://github.com/FAIRmat-NFDI/nomad-external-eln-integrations@982bbb3ed327d0256da59433e9bd66972cb8a86d",
  "pdf2doi @ git+https://github.com/sherjeelshabih/pdf2doi.git@fix-missing-config-in-wheel", # temporarily needed for solar cell database
  "perovskite-solar-cell-database[extraction]==1.2.13",
  "nomad-ml-workflows==0.0.6",
]
jupyter = []
dev = [
  "nomad-lab[infrastructure, dev]",
  "nomad-parser-plugins-electronic[dev]==1.0.13",
]
gpu-action = []
cpu-action = []

[tool.uv]
build-constraint-dependencies = ["wheel<0.46"]
constraint-dependencies = [ # can be removed once pynxtools removes kikuchipy restriction
  "hyperspy>=1.7.6",
  "pillow<10.1",
]
extra-build-dependencies = { flatdict = ["setuptools<82.0.0"] }  # https://github.com/gmr/flatdict/issues/60
required-version = ">=0.8.0"
index = [
  { name = "nomad-lab", url = "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple" },
  { name = "nomad-gui", url = "https://gitlab.mpcdf.mpg.de/api/v4/projects/8647/packages/pypi/simple" },
]
[tool.uv.sources]
nomad-lab = { index = "nomad-lab" }
nomad-gui = { index = "nomad-gui" }

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
[tool.setuptools_scm]
