[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["nomad-lab[infrastructure]>=1.4.1",
  "toposort",
  "nptyping",
]


[project.urls]
repository = "https://github.com/niklassiemer/cmnomad"

[project.optional-dependencies]
# Add your plugins to the list below.
plugins = [
  "nomad-gui",
  "nomad-simulations==0.6.0",
  "nomad-simulation-apps==0.1.2",
  "nomad-schema-plugin-run==1.0.5",
  "nomad-schema-plugin-simulation-workflow==1.0.11",
  "nomad-normalizer-plugin-bandstructure==1.0.4",
  "nomad-normalizer-plugin-dos==1.0.6",
  "nomad-normalizer-plugin-soap==1.0.2",
  "nomad-normalizer-plugin-spectra==1.0.4",
  "nomad-normalizer-plugin-system==1.0.5",
  "nomad-normalizer-plugin-simulation-workflow==1.0.4",
  "nomad-parser-plugins-electronic==1.0.13",
  "nomad-parser-plugins-atomistic==1.0.10",
  "nomad-parser-plugins-workflow==1.1.12",
  "nomad-parser-plugins-database==1.1.3",
  "pynxtools==0.12.0",
  "pynxtools-apm==0.4.3",
  "pynxtools-ellips==0.1.1",
  "pynxtools-em==0.4.2",
  "pynxtools-igor==0.1.4",
  "pynxtools-mpes==0.2.6",
  "pynxtools-raman==0.1.1",
  "pynxtools-spm==0.2.1",
  "pynxtools-xps==0.5.4",
  "pynxtools-xrd==0.0.7",
  "nomad-north-jupyter>=0.2.1",
  "nomad-ikz-plugin @ git+https://github.com/IKZ-Berlin/nomad-ikz-plugin.git@v0.1.11"
  ]
jupyter = ["jupyter-events"]
gpu-action = []
cpu-action = []

dev = ["nomad-lab[infrastructure, dev]",
"nomad-parser-plugins-electronic[dev]==1.0.13"
]

[tool.uv]
prerelease = "explicit"
constraint-dependencies = ["flatdict>=4.1.0",
  "hyperspy>=1.7.6",
  "pillow<10.1",
]
index = [
  { name = "nomad-lab", url = "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple" },
  { name = "nomad-gui", url = "https://gitlab.mpcdf.mpg.de/api/v4/projects/8647/packages/pypi/simple" },
]
[tool.uv.sources]
nomad-lab = { index = "nomad-lab" }
nomad-gui = { index = "nomad-gui" }
#index = [
#  { name = "nomad-lab", url = "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple" },
#  { name = "nomad-gui", url = "https://gitlab.mpcdf.mpg.de/api/v4/projects/8647/packages/pypi/simple" },
#]

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
